--- a/backup_mattermost.conf.sample
+++ b/backup_mattermost.conf.sample
@@ -1,21 +1,25 @@
 # mattermost backup configuration
 
-## S3 bucket
-s3path="s3://my-s3-bucket"
+## Mattermost path
+mattermostDir="opt/mattermost"
 
-## Set the variables to use the aws cli in cron
-export AWS_CONFIG_FILE="/root/.aws/config"
+## path to mattermost local backup directory
+localBackupDir="/var/dumps/mattermost/"
 
-## alternative instead of using aws config file. See http://docs.aws.amazon.com/cli/latest/userguide/cli-chap-getting-started.html#cli-environment
-#export AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
-#export AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-#export AWS_DEFAULT_REGION=eu-central-1
+## path to mattermost backup directory on backup storage server
+remoteBackupDir="/var/dumps/mattermost/"
 
-## The path to the aws cli
-awscli="/root/.local/bin/aws"
+# backup storage server host
+sshHost=
 
-## change only when in gitlab.rb the mattermost['home'] is set
-mattermostDir="/var/opt/gitlab/mattermost"
+# backup storage server port
+sshPort="22"
 
-## change only when in gitlab.rb the gitlab_rails['backup_path'] is set
-gitlabBackupDir="/var/opt/gitlab/backups"
+# backup storage server connect user
+sshUser=root
+
+# path to ssh key for connect to backup storage server
+sshKeyPath=
+
+# ssh passphrase
+sshPassphrase=
